# alpha-sim-framework

./: .gitignore  ALPHA_SOURCES_EVALUATION.md  CHANGELOG.md  IMPROVEMENTS.md  README.md  TODO.md  config.ab.free.template.json  config.ab.template.json  config.example.json  config.gateway_probe.template.json  config.template.json  pyproject.toml
.githooks/: pre-commit
docs/: ALPHA_PROVIDER_GUIDE.md  ARCHITECTURE.md  CONFIG_USAGE.md  ESPN_API_REFERENCE.md  FEATURES.md  FREE_AGENT_ROS_SUMMARY.md  GETTING_STARTED.md  IMPROVEMENTS.md  INJURY_FILTER_FIX.md  LEAGUE_CONTEXT.md  QUICK_START.md  README_espn_api.md  REPORT_DIRECTORY_FIX.md  ROS_TRADE_ANALYSIS.md  SYSTEM_OVERVIEW.md  TESTING.md  TRADE_VALUE_ANALYSIS.md
docs/gateway/: GAME_LOCATION_RESOLUTION.md  GATEWAY_ENDPOINT_CATALOG.md  GATEWAY_PROBE_SCORECARD_TEMPLATE.md  GO_LIVE_CHECKLIST.md  ID_CROSSWALK_SPEC.md  README.md  nfl_venue_registry.template.json
scripts/: check_docs_references.sh  check_no_private_cookies.sh  run_gateway_probe.py
src/alpha_sim_framework/: __init__.py  ab_evaluation.py  advanced_simulator.py  alpha_backtest.py  alpha_model.py  alpha_provider.py  alpha_snapshot.py  alpha_types.py  fantasy_decision_maker.py  (+8 more)
src/alpha_sim_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ab_evaluation.py  test_alpha_model.py  test_alpha_snapshot.py  test_composite_alpha_provider.py  test_feed_contracts.py  test_free_feed_mode.py  test_gateway_probe.py  test_historical_backtest.py  test_league_context.py  test_monte_carlo.py  test_snapshot_store.py
(+17 files in other folders)
