[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-sim-framework"
version = "0.1.0"
description = "Independent alpha/backtest/simulation framework for ESPN NFL fantasy data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "espn_api>=0.45.1",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pyarrow>=10.0.0",
    "scikit-learn>=1.0.0",
]

[project.scripts]
fantasy-decision-maker = "alpha_sim_framework.fantasy_decision_maker:main"
gateway-probe = "alpha_sim_framework.gateway_probe:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
